<resources>
    <string name="app_name">FLPRDCRDS</string>
    <string name="action_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_learning">Learning</string>
    <string name="pref_bgcolor">Background Color</string>
    <string name="pref_bgcolor_summary">Select the preferred background color</string>
    <string name="pref_fontcolor">Font Color</string>
    <string name="pref_fontcolor_summary">Select the preferred font color</string>
    <string name="pref_fontstyle">Font Style</string>
    <string name="pref_fontstyle_summary">Select the preferred font style</string>
    <string name="pref_reset">Reset</string>
    <string name="pref_reset_summary">Reset all settings to default</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_management">Word Management</string>
    <string name="add_word">Add Word</string>
    <string name="EXAMPLE_TEXT">Example text</string>
    <string name="next_session">NEXT SESSION</string>
    <string name="delete_all_words">Delete ALL words</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="sessions_finished_prompt">"Learning sessions finished: "</string>
    <string name="words_mastered_prompt">"Words mastered: "</string>
    <string name="best_known_words_prompt">"Best known words: "</string>
    <string name="words_you_struggle_with_prompt">"Words you struggle with: "</string>
    <string name="bgcolors_white">White</string>
    <string name="bgcolors_red">Red</string>
    <string name="bgcolors_green">Green</string>
    <string name="bgcolors_blue">Blue</string>
    <string name="bgcolors_black">Black</string>
    <string name="fontcolors_white">White</string>
    <string name="fontcolors_red">Red</string>
    <string name="fontcolors_green">Green</string>
    <string name="fontcolors_blue">Blue</string>
    <string name="fontcolors_black">Black</string>
    <string name="fontstyle_default">Default</string>
    <string name="delete_all_words_prompt">Are you sure you want to delete ALL words?</string>
    <string name="select_definition_prompt">Select definition for \'%1$s\'</string>
    <string name="btn_ok">OK</string>
    <string name="error_finding_word_data">Error finding word data</string>
    <string name="error_finding_word">Error finding word</string>
    <string name="error_no_definitions_found">No definitions found</string>
    <string name="error_could_not_find_word">Could not find the word \'%1$s\' in the dictionary</string>
    <string name="notification_title">Study time</string>
    <string name="notification_msg">It\'s time to study some words before you go to bed</string>
    <string name="didn_t_get_it">DIDN\'T GET IT</string>
    <string name="i_got_it">I GOT IT</string>
    <string name="end_session_title">Hooray! You did it!</string>
    <string name="end_session_msg">Come back tomorrow to learn some more :)</string>
    <string name="channel_name">flprcrdsChannel</string>
    <string name="channel_description">Notification from flprcrds application.</string>
    <string name="delete_single_word_prompt">Are you sure you want to delete this word entry?</string>
    <string name="pronunciation_button">Pronunciation button</string>
</resources>
