<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".management.ManagementFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/number_sessions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mastered_words"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/known_words"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/struggled_words"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textColor="@color/fontColor"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6" />

    </LinearLayout>

</FrameLayout>