<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dmu.sash.flprdcrds.MainActivity">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_school_black_24dp"
        android:orderInCategory="100"
        android:title="@string/nav_learning" />
    <item
        android:id="@+id/nav_management"
        android:icon="@drawable/baseline_list_alt_black_24dp"
        android:orderInCategory="101"
        android:title="@string/word_management" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_outline_black_24dp"
        android:orderInCategory="102"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_black_24dp"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
